Fixed a visibility issue with the top button.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,35 +78,38 @@ nav {
 
 .sticky + main { padding-top: 3px; }
 
+.navmenu {
+    padding-left: 0;
+    padding-right: 0;
+}
 
 /* TODO: Make this RWD */
 .navmenu > ul {
-    /* display: block; */
-    list-style-type: none;
-    /*
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    */
     height: 2em;
-    margin-top: 0px;
+    width: 100%;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
 }
 
 .navmenu > ul > li {
-    list-style-type: none;
     display: block;
+    list-style-type: none;
     float:left;
     height: 2em;
     min-width: 10em;
     vertical-align: middle;
     text-align: center;
     padding-top: 0.5em;
+    margin-left: 0;
 }
 
 .navmenu > ul > li:last-child {
     float: right;
-    text-align: right;
-    max-width: 20px;
+    /* text-align: center; */
+    /* width: min-content; /*20px;*/
+    /* visibility: hidden; */
 }
 
 .navmenu > ul > li:hover {
